--- a/style.css
+++ b/style.css
@@ -166,6 +166,10 @@ input[type=reset] {
   background-color: blue;
 }
 
+#ranks21 li {
+  background-color: red;
+}
+
 #ranksoverall li {
   background-color: purple;
 }
